Many visual tweaks to home, kingdom, and park pages.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,2 +1,68 @@
-// @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+.heraldry {
+  float: left;
+  height: 30px;
+  width: 30px;
+  margin-right: 0.5rem;
 
+  img {
+    height: 30px;
+  }
+}
+
+.kingdoms li {
+  list-style: none;
+  margin-right: 2rem;
+  float: left;
+}
+
+.parks li {
+  list-style: none;
+  margin: 1rem 0;
+  line-height: 2rem;
+}
+
+table {
+  td {
+    font-size: 0.8rem;
+  }
+}
+
+.kingdom-title {
+  margin: 2rem 0;
+
+  .parent {
+    display: block;
+    font-size: 1.5rem;
+  }
+
+  .heraldry {
+    float: left;
+    height: 200px;
+    width: 200px;
+    margin-right: 1rem;
+
+    img {
+      height: 200px;
+    }
+  }
+}
+
+.park-title {
+  margin: 2rem 0;
+
+  .kingdom {
+    display: block;
+    font-size: 1.5rem;
+  }
+
+  .heraldry {
+    float: left;
+    height: 200px;
+    width: 200px;
+    margin-right: 1rem;
+
+    img {
+      height: 200px;
+    }
+  }
+}
