--- a/resources/views/layout.twig
+++ b/resources/views/layout.twig
@@ -3,6 +3,7 @@
 <head>
     <title>{{ pageTitle }} | Amtgard ORK</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.css">
+    <link rel="stylesheet" href="{{ asset('css/app.css') }}">
 </head>
 <body>
 <div class="container">
@@ -16,7 +17,7 @@
         </div>
         <div class="top-bar-right">
             <ul class="menu">
-                <li><input type="search" placeholder="Search"></li>
+                <li><input type="search" placeholder="Player Search"></li>
                 <li>
                     <button type="button" class="button">Search</button>
                 </li>
