--- a/resources/views/park/show.twig
+++ b/resources/views/park/show.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row">
         <div class="small-12 columns">
-            <h1 class="park-title">
+            <h1 class="title">
                 {% if park.has_heraldry == 1 %}
                     <div class="heraldry">
                         <img src="http://amtgard.com/ork/assets/heraldry/park/{{ "%05d"|format(park.park_id) }}.jpg">
