--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -27,7 +27,7 @@ table {
   }
 }
 
-.kingdom-title {
+.title {
   margin: 2rem 0;
 
   .parent {
@@ -47,22 +47,20 @@ table {
   }
 }
 
-.park-title {
+.real-name {
+  display: block;
+  font-size: 1.25rem;
+}
+
+.type {
+  display: block;
+  font-size: 1.25rem;
+}
+
+.photo {
   margin: 2rem 0;
 
-  .kingdom {
-    display: block;
-    font-size: 1.5rem;
-  }
-
-  .heraldry {
-    float: left;
-    height: 200px;
-    width: 200px;
-    margin-right: 1rem;
-
-    img {
-      height: 200px;
-    }
+  img {
+    max-height: 200px;
   }
 }
