--- a/resources/views/kingdom/show.twig
+++ b/resources/views/kingdom/show.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row">
         <div class="small-12 columns">
-            <h1 class="kingdom-title">
+            <h1 class="title">
                 {% if kingdom.has_heraldry == 1 %}
                     <div class="heraldry">
                         <img src="http://amtgard.com/ork/assets/heraldry/kingdom/{{ "%04d"|format(kingdom.kingdom_id) }}.jpg">
