Added player searching.

--- a/resources/views/layout.twig
+++ b/resources/views/layout.twig
@@ -17,9 +17,9 @@
         </div>
         <div class="top-bar-right">
             <ul class="menu">
-                <li><input type="search" placeholder="Player Search"></li>
+                <li><input type="search" class="player-search" placeholder="Player Search"></li>
                 <li>
-                    <button type="button" class="button">Search</button>
+                    <button type="button" class="button search">Search</button>
                 </li>
             </ul>
         </div>
@@ -28,6 +28,7 @@
     {% endblock %}
     <script src="//code.jquery.com/jquery-2.2.0.min.js"></script>
     <script src="//cdn.jsdelivr.net/foundation/6.1.2/foundation.min.js"></script>
+    <script src="{{ asset( 'js/all.js' ) }}"></script>
 </div>
 </body>
 </html>
