--- a/resources/views/layout.twig
+++ b/resources/views/layout.twig
@@ -26,6 +26,15 @@
     </div>
     {% block content %}
     {% endblock %}
+    <footer class="row">
+        <div class="small-12 columns">
+            <h2>Keyboard Shortcuts</h2>
+            <ul>
+                <li><p><span class="badge">s</span> Start a search</p></li>
+                <li><p><span class="badge">h</span> Go to the home page</p></li>
+            </ul>
+        </div>
+    </footer>
     <script src="//code.jquery.com/jquery-2.2.0.min.js"></script>
     <script src="//cdn.jsdelivr.net/foundation/6.1.2/foundation.min.js"></script>
     <script src="{{ asset( 'js/all.js' ) }}"></script>
