Made page title raw.

--- a/resources/views/layout.twig
+++ b/resources/views/layout.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{{ pageTitle }} | Amtgard ORK</title>
+    <title>{{ pageTitle|raw }} | Amtgard ORK</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.css">
     <link rel="stylesheet" href="{{ asset('css/app.css') }}">
 </head>
